--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["env_logger", "auth"]
+default = ["env_logger", "auth", "strict"]
 env_logger = ["dep:env_logger"]
 auth = ["dep:sha2"]
+strict = ["dep:regex", "dep:lazy_static"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 log = { version = "0.4.4", default-features = false }
 env_logger = { version = "0.10.0", optional = true }
 sha2 = { version = "0.10.6", optional = true }
+regex = { version = "1.8.1", optional = true }
+lazy_static = { version = "1.4.0", optional = true }
 
 [dev-dependencies]
 test-log = "0.2.11"
